--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "electron": "electron .",
-    "start": "concurrently \"npm run dev\" \"npm run electron\""
+    "start": "concurrently \"npm run dev\" \"npm run electron\"",
+    "postinstall": "electron-rebuild"
   },
   "dependencies": {
+    "@blackglory/better-sqlite3-migrations": "^0.1.19",
+    "better-sqlite3": "^11.10.0",
+    "dhcp": "^0.2.20",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0"
@@ -24,6 +28,7 @@
     "@vitejs/plugin-react": "^4.5.2",
     "concurrently": "^9.2.0",
     "electron": "^37.1.0",
+    "electron-rebuild": "^3.2.9",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
